--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,7 @@
 language: go
+
+script:
+  - go test -v -covermode=count -coverprofile=coverage.out ./...
+after_success:
+  - gox -output "dist/{{.OS}}_{{.Arch}}_{{.Dir}}"
+  - ghr --username tcnksm-sample --token $GITHUB_TOKEN --replace --prerelease --debug pre-release dist/
