--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,11 @@
 language: go
 
+before_install:
+  - go get github.com/mitchellh/gox
+  - gox -build-toolchain
+  - go get github.com/tcnksm/ghr
 script:
   - go test -v ./...
+after_success:
+  - gox -output "dist/{{.OS}}_{{.Arch}}_{{.Dir}}"
+  - ghr --username vfarcic --token $GITHUB_TOKEN --replace --prerelease --debug pre-release dist/
