--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2'
 
 services:
   app:
-    image: vfarcic/books-ms
+    image: vfarcic/books-ms${BOOKS_MS_VERSION}
     ports:
       - 8080
     environment:
