--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,7 @@ script:
 after_success:
   - gox -output "dist/{{.Dir}}_{{.OS}}_{{.Arch}}"
   - ghr --username vfarcic --token $GITHUB_TOKEN --replace --debug v0.1.0 dist/
+
+branches:
+  only:
+    - master
