--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,9 @@ before_install:
 script:
   - go test -v ./...
 after_success:
-  only:
-    - master
   - gox -output "dist/{{.Dir}}_{{.OS}}_{{.Arch}}"
   - ghr --username vfarcic --token $GITHUB_TOKEN --replace --debug v0.1.0 dist/
+
+branches:
+  only:
+    - master
