Removed release from .travis in case of a pull request

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ before_install:
 script:
   - go test -v ./...
 after_success:
-  - [ "${TRAVIS_PULL_REQUEST}" = "false" ] && gox -output "dist/{{.Dir}}_{{.OS}}_{{.Arch}}" || false
-  - [ "${TRAVIS_PULL_REQUEST}" = "false" ] && ghr --username vfarcic --token $GITHUB_TOKEN --replace --debug v${VERSION} dist/ || false
+  - '[ "${TRAVIS_PULL_REQUEST}" = "false" ] && gox -output "dist/{{.Dir}}_{{.OS}}_{{.Arch}}" || false'
+  - '[ "${TRAVIS_PULL_REQUEST}" = "false" ] && ghr --username vfarcic --token $GITHUB_TOKEN --replace --debug v${VERSION} dist/ || false'
 
 branches:
   only:
