--- a/articles/dns/docker-compose-internal.yml
+++ b/articles/dns/docker-compose-internal.yml
@@ -2,16 +2,11 @@ version: '2'
 
 services:
   app:
-    image: vfarcic/books-ms${BOOKS_MS_VERSION}
+    image: vfarcic/books-ms
     ports:
       - 8080
     environment:
-      - SERVICE_NAME=books-ms
       - DB_HOST=books-ms-db
-    networks:
-      default:
-        aliases:
-          - books-ms
     depends_on:
       - db
 
